# playarr

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  README.md  index.html  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.bruno/: playarr-openapi.yaml
.bruno/Playarr API/: opencollection.yml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE_FEATURE_REQUEST.md  custom.md  feature_request.md
.github/workflows/: publish-ghcr.yml
bruno_collections/Plex-API/: bruno.json  collection.bru
src/: main.tsx
src-actix/: http_error.rs  lib.rs  main.rs  status_endpoints.rs  tests.rs
src-actix/auth/: mod.rs  plex_auth.rs
src-actix/config/: mod.rs  models.rs
src-actix/discover/: tmdb.rs
src-actix/downloads/: mod.rs  nzbget.rs  qbittorrent.rs  sabnzbd.rs  transmission.rs
src-actix/plex/: client.rs  hub.rs  libraries.rs  media.rs  mod.rs  search.rs  timeline.rs  users.rs
src-actix/radarr/: calendar.rs  client.rs  commands.rs  mod.rs  movies.rs  profiles.rs  queue.rs  releases.rs
src-actix/settings/: endpoints.rs
src-actix/sonarr/: calendar.rs  client.rs  commands.rs  episodes.rs  mod.rs  profiles.rs  queue.rs  releases.rs  series.rs
src-actix/subtitles/: mod.rs
src-actix/watch_party/: mod.rs  queue.rs  room.rs  websocket.rs
src/components/: Navigation.tsx  ReactScanComponent.tsx
src/css/: index.css
src/hooks/: useCalendar.ts  useDebounce.ts  useDiscover.ts  useDownloads.ts  usePlex.ts  useTmdbLogo.ts  useWatchParty.ts
src/lib/: api.ts  bif-parser.ts  codec-support.ts  plex.ts  types.ts  utils.ts
(+295 files in other folders)
