[package]
name = "playarr"
version = "0.0.1-alpha"
edition = "2024"
authors = ["Drew Chase"]
description = "A self-hosted media dashboard that unifies Plex, Sonarr, Radarr, TMDB, and popular download clients into a single interface. Built with a Rust backend and React frontend."
build = "src-actix/build.rs"

[[bin]]
name = "playarr"
path = "src-actix/main.rs"

[lib]
name = "playarr_lib"
path = "src-actix/lib.rs"
crate-type = ["lib"]

[dependencies]
actix-web = { version = ">=4.9.0" }
actix-files = { version = ">=0.6.6" }
actix-ws = ">=0.3.0"
futures-util = ">=0.3.30"
serde = { version = ">=1.0.208", features = ["derive"] }
serde_json = { version = ">=1.0.125" }
pretty_env_logger = ">=0.5.0"
include_dir = ">=0.7.4"
walkdir = ">=2.5.0"
log = ">=0.4.22"
anyhow = ">=1.0.95"
thiserror = ">=2.0.11"
vite-actix = ">=0.2.5"
reqwest = { version = ">=0.12", features = ["json", "multipart", "rustls-tls", "gzip", "deflate", "brotli"], default-features = false }
tokio = { version = ">=1.0", features = ["full"] }
uuid = { version = ">=1.0", features = ["v4", "serde"] }
chrono = { version = ">=0.4", features = ["serde"] }
toml = ">=0.8"
dashmap = ">=6.0"
dirs = ">=6.0"
rusty_ytdl = ">=0.7"

[dev-dependencies]
wiremock = "0.6"
actix-rt = "2"

[build-dependencies]
include_dir = "0.7.4"
walkdir = "2.5.0"
